--- a/conf/conf.ini
+++ b/conf/conf.ini
@@ -33,6 +33,7 @@ loans_name = loans
 [HEADERS]
 headers = {"X-Lemonban-Media-Type": "lemonban.v1"}
 headers_v2 = {"X-Lemonban-Media-Type": "lemonban.v2"}
+headers_v3 = {"X-Lemonban-Media-Type": "lemonban.v3"}
 
 [URL]
 url = http://api.lemonban.com/futureloan
@@ -63,10 +64,10 @@ loans_method = get
 leave_amount_max = 500000
 preset_recharge_amount = 500000
 preset_recharge_times = 3
-loan_params = {'mobile_phone': 15679843543, 'pwd': '334498sun'}
-admin_params = {'mobile_phone': 15625468970, 'pwd': '334498sun'}
-invest_params = {'mobile_phone': 15639380044, 'pwd': '334498sun'}
+loan_params = {'mobile_phone': 15654970000, 'pwd': '334498sun'}
+admin_params = {'mobile_phone': 15681907191, 'pwd': '334498sun'}
+invest_params = {'mobile_phone': 15664883659, 'pwd': '334498sun'}
 
 [SETUPDATA]
-audit_loan = {'loan_id': 3088, 'amount': 100000000}
+audit_loan = {'loan_id': 3283, 'amount': 100000000}
 
